apps/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 7878
          readinessProbe:
            tcpSocket:
              port: 7878
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 7878
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: transmission-data
              mountPath: /data
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config-local
        - name: transmission-data
          persistentVolumeClaim:
            claimName: transmission-data-local
